syntax = "proto3";

package com.xaaef;

option csharp_namespace = "GrpcService1";
option go_package = "./pb;greet";
option java_multiple_files = true;
option java_package = "com.xaaef.grpc.lib.pb";

service Greeter {

  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){}

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  map<string, string> message = 1;
}

